--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -71,12 +71,14 @@ jobs:
           echo remote remove is done
           #git remote set-url origin git@github.com:@GHACCOUNT/$REPO.git
           git remote add origin https://aliomom:${{ secrets.ghtoken }}@github.com/aliomom/$REPO.git
+          ls -al
           if (($envpriv=="true"))
           than
           rm -rf .htaccess
           cd ..
           rm -rf .env 
           else
+          echo ok 
           sed -i "s|$FORREPLACE123|$REPO|g" .env
           cd public
           sed -i "s|$FORREPLACE123|$REPO|g" .htaccess
