--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -131,4 +131,5 @@ jobs:
           export_default_credentials: true
 
       - run: |-
+          gcloud --quiet auth configure-docker
           ls 
