--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,8 +6,16 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-env: 
-  REPOENV: REPOENV
+env:
+  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+  GKE_CLUSTER: test    # TODO: update to cluster name
+  GKE_ZONE: us-central1-c   # TODO: update to cluster zone
+  DEPLOYMENT_NAME: turkish-app-test
+  IMAGE: static-site
+  ORGANIZATION: yes-soft-de
+  ENVREPO: environment-tools
+  
+
 
 
 
@@ -124,7 +132,6 @@ jobs:
          
       - uses: google-github-actions/setup-gcloud@master
         with:
-          version: '290.0.1'
           service_account_key: ${{ secrets.GKE_SA_KEY }}
           #service_account_email: ${{ secrets.service_account_email }}
           project_id: ${{ secrets.GKE_PROJECT }}
