--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -131,7 +131,10 @@ jobs:
          git commit -a -m "add .env and .htacces and jwt"
          git push 
          
-
+      - uses: actions/checkout@v2
+        with:
+         repository: yes-soft-de/environment-tools
+         token: ${{ secrets.ENVGHTOKEN }}
       - uses: google-github-actions/setup-gcloud@master
         with:
           version: '290.0.1'
