--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,7 +43,7 @@ jobs:
           gh auth login --with-token < token.txt
           git remote rm origin 
           #change GHACCOUNT to yessoft when u finish 
-          #gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
+          gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
           echo repo is created 
           git remote rm origin 
           echo ${GH_USERNAME}
