--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -66,9 +66,15 @@ jobs:
           cd .. 
           project=${{secrets.GKE_PROJECT}}
           echo $project
+          
           sed -i "s|PROJECT_ID123|$project|g" Dockerfile
           sed -i "s|SECRETNAME123|${REPO}sec|g" Dockerfile
+          if ($envpriv=='true')
+          then
+          sed -i "s|#@1||g" Dockerfile
+          fi
 
+         
 
           
 
@@ -132,7 +138,7 @@ jobs:
          git push 
 
          
-      - uses: actions/checkout@v2
+
        
       - uses: google-github-actions/setup-gcloud@master
         with:
@@ -143,5 +149,26 @@ jobs:
           export_default_credentials: true
           
 
-      - name: Use gcloud CLI
-        run: gcloud info
+      - run: |
+         gcloud builds submit --tag=gcr.io/${{ secrets.GKE_PROJECT }}/${RIPP}sec
+      - uses: actions/checkout@v2
+      - uses: google-github-actions/setup-gcloud@master
+        with:
+          
+         
+          service_account_email: ${{ secrets.service_account_email }}
+          project_id: ${{ secrets.GKE_PROJECT }}
+          export_default_credentials: true
+      - run: |
+         gcloud builds submit --tag=gcr.io/${{ secrets.GKE_PROJECT }}/${RIPP}
+         cd k8s
+         kubectl apply -f namespace.yaml
+         kubectl apply -f secret.yaml
+         kubectl apply -f configmap.yaml
+         kubectl apply -f mysql.yaml
+         kubectl apply -f server.yaml
+
+          
+
+
+         
