--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -152,8 +152,8 @@ jobs:
       - run: |
          echo "${{ secrets.keyfile }}" > key.json
          echo file is generated
-         cat key.json
-         gcloud auth activate-service-account action@pc-api-6479467557629758909-343.iam.gserviceaccount.com --key-file="key.json"
+ 
+         gcloud auth activate-service-account action@pc-api-6479467557629758909-343.iam.gserviceaccount.com --key-file=${{ secrets.keyfile }}
          # gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
          gcloud builds submit --tag=gcr.io/${{ secrets.GKE_PROJECT }}/${RIPP}sec
       - uses: actions/checkout@v2
