--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -147,10 +147,15 @@ jobs:
           service_account_email: ${{ secrets.service_account_email }}
           project_id: ${{ secrets.GKE_PROJECT }}
           export_default_credentials: true
-          
+      - uses: google-github-actions/get-gke-credentials@v0.2.1
+        with:
+          cluster_name: ${{ env.GKE_CLUSTER }}
+          location: ${{ env.GKE_ZONE }}
+          credentials: ${{ secrets.GKE_SA_KEY }}
+
 
       - run: |
-         cat <<< "${{ secrets.keyfile }}" > "key.json"
+         #cat <<< "${{ secrets.keyfile }}" > "key.json"
          #echo "${{ secrets.keyfile }}" > "key.json"
          echo file is generated
  
