--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -143,15 +143,10 @@ jobs:
       - uses: google-github-actions/setup-gcloud@master
         with:
           
-          
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
           service_account_email: ${{ secrets.service_account_email }}
           project_id: ${{ secrets.GKE_PROJECT }}
           export_default_credentials: true
-      - uses: google-github-actions/get-gke-credentials@v0.2.1
-        with:
-          cluster_name: ${{ env.GKE_CLUSTER }}
-          location: ${{ env.GKE_ZONE }}
-          credentials: ${{ secrets.GKE_SA_KEY }}
 
 
       - run: |
@@ -160,17 +155,20 @@ jobs:
          echo file is generated
  
          #gcloud auth activate-service-account action@pc-api-6479467557629758909-343.iam.gserviceaccount.com --key-file=key.json
-         # gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
+         gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
          gcloud builds submit --tag=gcr.io/${{ secrets.GKE_PROJECT }}/${RIPP}sec
       - uses: actions/checkout@v2
       - uses: google-github-actions/setup-gcloud@master
         with:
           
-         
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+
           service_account_email: ${{ secrets.service_account_email }}
           project_id: ${{ secrets.GKE_PROJECT }}
           export_default_credentials: true
       - run: |
+         gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
+
          gcloud builds submit --tag=gcr.io/${{ secrets.GKE_PROJECT }}/${RIPP}
          cd k8s
          kubectl apply -f namespace.yaml
