--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -149,6 +149,7 @@ jobs:
 
 
       - run: |
+         gcloud --quiet auth configure-docker
 
          echo file is generated
          gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
