--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -123,10 +123,9 @@ jobs:
            echo "${{ secrets.HTACCESS }}" > .htaccess
            echo create .htaccess
            echo creating .env and .htaccess is done 
-           cat > Dockerfile <<EOF
-           >FROM alpine:3.7
-           >COPY . .
-           >EOF 
+           echo 'FROM alpine:3.7
+           COPY . . ' > Dockerfile
+            
          fi
          mkdir jwt && cd jwt
          echo creating new jwt dir
