--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -155,6 +155,7 @@ jobs:
          echo file is generated
          #gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
          echo gcget
+         cd $RIPP
          gcloud builds submit --tag=gcr.io/${{ secrets.GKE_PROJECT }}/${RIPP}sec
          
       - uses: actions/checkout@v2
