--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,6 +42,7 @@ jobs:
           echo $RIPP
           echo ${{ secrets.ghtoken }} > token.txt
           #gh auth login --with-token < token.txt
+          gh auth login --web
           git remote rm origin 
           #change GHACCOUNT to yessoft when u finish 
           gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
