--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,10 +40,11 @@ jobs:
           echo "GHACCOUNT=${GHACCOUNT}" >> $GITHUB_ENV
           echo "TOKEN=${{ github.token }}" >> $GITHUB_ENV   
           #echo "::set-env name=REP::$REPO"
+          
           echo $RIPP
           echo "${{ secrets.GITHUB_TOKEN }}" > token.txt
-          
-          gh auth login --with-token < token.txt
+          gh config set -h github.com oauth_token ${{ secrets.GITHUB_TOKEN }}
+          #gh auth login --with-token < token.txt
           
         
           git remote rm origin 
