--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,10 +42,11 @@ jobs:
           #echo "::set-env name=REP::$REPO"
           
           echo "${{ github.token }}"
-          echo "${{ github.token }}" > token.txt
+          echo "${{ secrets.GHTOKEN }}" > token.txt
           
           echo txt is done 
-          gh auth login --with-token < token.txt
+          gh auth login --with-token process.env.GITHUB_TOKEN
+          #gh auth login --with-token < token.txt
           git remote rm origin 
           #change GHACCOUNT to yessoft when u finish 
           gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
@@ -70,14 +71,11 @@ jobs:
           sed -i "s|#@1||g" Dockerfile
           fi
           git remote rm origin 
-
           #git remote set-url origin git@github.com:@GHACCOUNT/$REPO.git
           git remote add origin https://aliomom:${{ secrets.ghtoken }}@github.com/aliomom/$REPO.git
-
           sed -i "s|FORREPLACE123|$REPO|g" .env
           cd public
           sed -i "s|FORREPLACE123|$REPO|g" .htaccess
-
           if [[ $envpriv=='true' ]]
           then
             rm -rf .htaccess
