--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,8 +45,8 @@ jobs:
           echo "${{ secrets.GHTOKEN }}" > token.txt
           
           echo txt is done 
-          gh auth login --with-token process.env.GITHUB_TOKEN
-          #gh auth login --with-token < token.txt
+          #gh auth login --with-token process.env.GITHUB_TOKEN
+          gh auth login --with-token < token.txt
           git remote rm origin 
           #change GHACCOUNT to yessoft when u finish 
           gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
