--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,14 +41,13 @@ jobs:
           echo "GHACCOUNT=${GHACCOUNT}" >> $GITHUB_ENV
           echo "TOKEN=${{ github.token }}" >> $GITHUB_ENV   
           #echo "::set-env name=REP::$REPO"
-          
-          echo "${token}"
-          echo "${token}" > token.txt
+
+          echo "${{ secrets.GHTOKEN }}" > token.txt
           
           echo txt is done 
-          #gh auth login --with-token process.env.GITHUB_TOKEN
-          gh auth login --with-token < token.txt
 
+          gh auth login --with-token < token.txt
+          echo login to gh is done
           git remote rm origin 
           #change GHACCOUNT to yessoft when u finish 
           gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
