--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -54,7 +54,7 @@ jobs:
           echo 0.3
           sleep 15
           echo 0.4
-          git clone  https://github.com/$OWENER/$REPO.git
+          git clone  https://github.com/$OWENR/$REPO.git
           echo 0.5
           cd $REPO/k8s
           echo 0.4
