--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -73,10 +73,10 @@ jobs:
           sed -i "s|#@1||g" Dockerfile
           fi
           echo 1
-          git remote rm origin 
+          #git remote rm origin 
           echo 2
           #git remote set-url origin git@github.com:@GHACCOUNT/$REPO.git
-          git remote add origin https://yes-cloud-env:${{ secrets.GHTOKEN }}@github.com/${OWENR}/$REPO.git
+          # git remote add origin https://yes-cloud-env:${{ secrets.GHTOKEN }}@github.com/${OWENR}/$REPO.git
           echo 3
           sed -i "s|FORREPLACE123|$REPO|g" .env
           cd public
