--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -58,6 +58,8 @@ jobs:
         with:
          repository: $OWENR/$REPO.git
          token: ${{ secrets.ENVGHTOKEN }}
+         ref: symfony-app-skeleton
+
       - run: |
           #git clone  https://github.com/$OWENR/$REPO.git
           echo 0.5
