--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,7 @@ jobs:
           echo "GKE_ZONE=${GKE_ZONE}" >> $GITHUB_ENV
           echo "OWENR=${OWENR}" >> $GITHUB_ENV
           #echo "::set-env name=REP::$REPO"
+          echo "path="${OWENR}/${REPO}.git"" >> $GITHUB_ENV
 
           echo "${{ secrets.GHTOKEN }}" > token.txt
           
@@ -56,7 +57,7 @@ jobs:
           echo 0.4
       - uses: actions/checkout@v2
         with:
-         repository: ${OWENR}/${RIPP}.git
+         repository: ${ path }
          token: ${{ secrets.ENVGHTOKEN }}
          ref: symfony-app-skeleton
 
